--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body{
     font-size: 14px;
 }
 
-#ucontent div.column p{
+div.column p{
     text-indent: 3em;
 }
 
@@ -22,12 +22,12 @@ h1, h2, h3, h4{
     padding-top: 3em;
 }
 
-#uheader h1{
+h1#uheader {
     padding-top: 0.5em;
 }
 
-#ucontent h2{
-    font-style: italic;
+div.column p {
+    text-indent: 0;
 }
 
 #content{
@@ -223,7 +223,7 @@ h3, h4 {
         margin: 0;
     }
 
-    #uheader h1 {
+    h1#uheader {
         font-size: 20px;
         line-height: 1;
     }
